# pcl_ros_wrapper

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classpcl_1_1registration_1_1_warp_point2_d.html  classpcl_1_1registration_1_1_warp_point2_d.js  classpcl_1_1registration_1_1_warp_point2_d__coll__graph.map  classpcl_1_1registration_1_1_warp_point2_d__coll__graph.md5  classpcl_1_1registration_1_1_warp_point2_d_yaw.html  classpcl_1_1registration_1_1_warp_point2_d_yaw.js  classpcl_1_1registration_1_1_warp_point2_d_yaw__coll__graph.map  classpcl_1_1registration_1_1_warp_point2_d_yaw__coll__graph.md5  classpcl_1_1registration_1_1_warp_point3_d_yaw.html  classpcl_1_1registration_1_1_warp_point3_d_yaw.js  classpcl_1_1registration_1_1_warp_point3_d_yaw__coll__graph.map  classpcl_1_1registration_1_1_warp_point3_d_yaw__coll__graph.md5  classpcl_1_1registration_1_1_warp_point_yaw.html  classpcl_1_1registration_1_1_warp_point_yaw.js  classpcl_1_1registration_1_1_warp_point_yaw__coll__graph.map  classpcl_1_1registration_1_1_warp_point_yaw__inherit__graph.md5  crop__box_8cpp.html  crop__box_8cpp.js  crop__box_8cpp__incl.map  crop__box_8cpp__incl.md5  crop__box_8hpp.html  crop__box_8hpp.js  crop__box_8hpp__dep__incl.map  crop__box_8hpp__dep__incl.md5  crop__box_8hpp__incl.map  crop__box_8hpp__incl.md5  crop__box_8hpp_source.html  dir_000000_000001.html  dir_000004_000003.html  dir_000005_000003.html  dir_000006_000003.html  (+233 more)
examples/: crop_box.cpp  outlier_filter.cpp  sample_consensus.cpp  voxel_grid.cpp
include/pcl_ros_wrapper/common/: general.hpp  surface.hpp  type_traits.hpp  types.hpp
include/pcl_ros_wrapper/filters/: crop_box.hpp  outlier.hpp  upsampling.hpp  voxel.hpp
include/pcl_ros_wrapper/registration/: icp.hpp  warp_point_2d.hpp  warp_point_2d_yaw.hpp  warp_point_3d_yaw.hpp  warp_point_yaw.hpp
include/pcl_ros_wrapper/segmentation/: sac.hpp
nodes/: avg_depth.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+31 more)
src/common/: general.cpp  surface.cpp
src/filters/: upsampling.cpp
src/registration/: icp.cpp
src/segmentation/: sac.cpp
