<?xml version="1.0"?>
<package format="2">
  <name>pcl_ros_wrapper</name>
  <version>0.0.0</version>
  <description>The pcl_ros_wrapper package</description>
  <maintainer email="lovro.markovic@fer.hr">lmark</maintainer>
  <license>BSD-3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
